--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,5 +28,5 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>scenario-weaver-core</artifactId>
-    <version>${project.parent.version}</version>
+    <version>1.0-SNAPSHOT</version>
 </project>
