--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -18,16 +18,16 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>be.moesmedia</groupId>
-    <artifactId>scenario-weaver</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>scenario-weaver-junit</artifactId>
-  <version>${project.parent.version}</version>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>be.moesmedia</groupId>
+        <artifactId>scenario-weaver</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>scenario-weaver-junit</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -36,7 +36,6 @@
         <dependency>
             <groupId>be.moesmedia</groupId>
             <artifactId>scenario-weaver-core</artifactId>
-            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
