--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,27 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>be.moesmedia</groupId>
+                <artifactId>scenario-weaver-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>be.moesmedia</groupId>
+                <artifactId>scenario-weaver-junit</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>be.moesmedia</groupId>
+                <artifactId>scenario-weaver-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>be.moesmedia</groupId>
+                <artifactId>scenario-weaver-examples</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.wiremock.integrations</groupId>
                 <artifactId>wiremock-spring-boot</artifactId>
                 <version>${wiremock.version}</version>
