--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -28,7 +28,7 @@ jobs:
         run: cat $GITHUB_WORKSPACE/settings.xml
 
       - name: Publish SNAPSHOT to GitHub Packages
-        run: mvn -B clean deploy -DskipTests
+        run: mvn -B -s ${{ github.workspace }}/settings.xml clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_ACTOR: ${{ github.actor }}
