--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -24,10 +24,18 @@ jobs:
           server-id: github
           settings-path: ${{ github.workspace }}
 
-      - name: Generate Changelog
+      - name: Download git-chglog
         run: |
           curl -sSL https://github.com/git-chglog/git-chglog/releases/download/v0.15.1/git-chglog_0.15.1_linux_amd64.tar.gz | tar xz
-          ./git-chglog --output CHANGELOG.md
+
+      - name: Init git-chglog config if missing
+        run: |
+          if [ ! -f .chglog/config.yml ]; then
+            ./git-chglog init
+          fi
+
+      - name: Generate Changelog
+        run: ./git-chglog --output CHANGELOG.md
 
       - name: Publish SNAPSHOT to GitHub Packages
         run: mvn -B -s ${{ github.workspace }}/settings.xml clean deploy -DskipTests
