--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -24,26 +24,20 @@ jobs:
           server-id: github
           settings-path: ${{ github.workspace }}
 
-      - name: Generate Conventional Changelog
-        uses: TriPSs/conventional-changelog-action@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          output-file: CHANGELOG.md
-          skip-version-file: true
-
       - name: Publish SNAPSHOT to GitHub Packages
         run: mvn -B -s ${{ github.workspace }}/settings.xml clean deploy -DskipTests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_ACTOR: ${{ github.actor }}
 
-      - name: Create GitHub Pre-release
-        uses: softprops/action-gh-release@v2
+      - name: Semantic Release (changelog & pre-release)
+        uses: cycjimmy/semantic-release-action@v4
         with:
-          tag_name: development-SNAPSHOT-${{ github.sha }}
-          name: Development Snapshot ${{ github.sha }}
-          draft: false
-          prerelease: true
-          body_path: CHANGELOG.md
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+            @semantic-release/commit-analyzer
+            @semantic-release/release-notes-generator
+            @semantic-release/github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
