--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ build/
 .gradletasknamecache
 gradle-app.setting
 !gradle-wrapper.jar
+settings.xml
+toolchains.xml
 
 ##############################
 ## IntelliJ
