--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,7 @@
     "main",
     {
       "name": "development",
-      "prerelease": true
+      "prerelease": "SNAPSHOT"
     }
   ],
   "plugins": [
@@ -27,6 +27,19 @@
     [
       "@semantic-release/github",
       { "assets": [] }
+    ],
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "mvn versions:set -DnewVersion=${nextRelease.version} -DgenerateBackupPoms=false"
+      }
+    ]
+    [
+        "@semantic-release/git",
+        {
+          "assets": ["pom.xml"],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
     ]
   ],
   "main": {
@@ -39,6 +52,15 @@
         "@semantic-release/release-notes-generator",
         { "preset": "conventionalcommits" }
       ],
+      [
+             "@semantic-release/release-notes-generator",
+              {
+                "preset": "conventionalcommits",
+                "writerOpts": {
+                  "commitPartial": "- {{header}}\n{{#if body}}\n  {{body}}\n{{/if}}"
+                }
+              }
+          ],
       [
         "@semantic-release/changelog",
         { "changelogFile": "CHANGELOG.md" }
