--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -34,6 +34,7 @@ jobs:
             @semantic-release/release-notes-generator
             @semantic-release/github
             conventional-changelog-conventionalcommits
+            @semantic-release/exec
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
