--- a/.releaserc
+++ b/.releaserc
@@ -36,7 +36,7 @@
     [
         "@semantic-release/git",
         {
-          "assets": ["pom.xml"],
+          "assets": ["**/pom.xml"],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
     ]
@@ -77,7 +77,7 @@
       [
         "@semantic-release/git",
         {
-          "assets": ["CHANGELOG.md", "pom.xml"],
+          "assets": ["CHANGELOG.md", "**/pom.xml"],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
       ]
