--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,33 +7,7 @@ on:
     branches: [ "**" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Run Spotless (format check)
-        run: mvn spotless:check
-
-      - name: Run Checkstyle
-        run: mvn checkstyle:check
-
-      - name: Build and Test
-        run: mvn -B clean install
-
-      - name: Run SpotBugs
-        run: mvn spotbugs:check
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: junit-results
-          path: '**/target/surefire-reports/*.xml'
+  build-test-and-lint:
+    uses: ./.github/jobs/build-test-and-lint.yml
+    with:
+      run-tests: true
