chore: cleaning up workflows

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,5 +9,9 @@ on:
 jobs:
   analyze:
     uses: ./.github/workflows/analyze-code.yml
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     with:
       fail-fast: false
