chore: cleaning up workflows

--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          cache: "maven"
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
