--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -37,6 +37,14 @@ jobs:
           name: junit-results
           path: '**/target/surefire-reports/*.xml'
 
+      - name: Publish Test Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: JUnit Tests
+          path: '**/target/surefire-reports/*.xml'
+          reporter: java-junit
+
   lint:
     runs-on: ubuntu-latest
     needs: build-and-test
