chore: cleaning up workflows

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -19,6 +19,9 @@ jobs:
       contents: read
       security-events: write
   dependency-submission:
+    permissions:
+      contents: write
+      id-token: write
     uses: ./.github/workflows/dependency-submission.yml
   publish-snapshot:
     needs:
