chore: cleaning up workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,7 @@ jobs:
     with:
       fail-fast: false
   dependency-submission:
+    permissions:
+      contents: write
+      id-token: write
     uses: ./.github/workflows/dependency-submission.yml
