--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ name: CI
 on:
   push:
     branches: [ "**" ]
+    branches-ignore:
+      - main
+      - development
   pull_request:
     branches: [ "**" ]
 
