--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -2,10 +2,10 @@ name: analyze-code.yml
 on:
   workflow_call:
     inputs:
-      fail-fast:
+      language:
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: 'java'
 
 
 jobs:
@@ -15,10 +15,6 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    strategy:
-      fail-fast: ${{ inputs.fail-fast }}
-      matrix:
-        language: [ 'java' ]
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -30,7 +26,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
+          languages: ${{ inputs.language }}
       - name: Autobuild
         uses: github/codeql-action/autobuild@v3
       - name: Perform CodeQL Analysis
