--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -6,28 +6,28 @@ on:
       - development
 
 jobs:
-  _01-build-test-and-lint:
+  build-test-and-lint:
     uses: ./.github/workflows/build-test-and-lint.yml
     permissions:
       checks: write
       pull-requests: write
       contents: read
-  _02-analyze:
+  analyze:
     uses: ./.github/workflows/analyze-code.yml
     permissions:
       actions: read
       contents: read
       security-events: write
-  _03-dependency-submission:
+  dependency-submission:
     permissions:
       contents: write
       id-token: write
     uses: ./.github/workflows/dependency-submission.yml
   publish-snapshot:
     needs:
-      - _01-build-test-and-lint
-      - _02-analyze
-      - _03-dependency-submission
+      - build-test-and-lint
+      - dependency-submission
+      - analyze
     runs-on: ubuntu-latest
 
     permissions:
