--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <spring.boot.version>3.5.7</spring.boot.version>
         <wiremock.version>4.0.8</wiremock.version>
         <mockito.version>5.2.0</mockito.version>
+        <palantir.verions>2.36.0</palantir.verions>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -146,7 +147,7 @@
                 <configuration>
                     <java>
                         <palantirJavaFormat>
-                            <version>2.36.0</version>
+                            <version>${palantir.verions}</version>
                         </palantirJavaFormat>
                     </java>
                 </configuration>
