chore: configuring docs and github pages

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
+    environment: github-pages
     permissions:
       contents: write
     steps:
