--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,10 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    with:
-      fail-fast: false
   dependency-submission:
     permissions:
       contents: write
       id-token: write
     uses: ./.github/workflows/dependency-submission.yml
+  check-license-headers:
+    uses: ./.github/workflows/check-license.yml
