--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/examples/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
