feat: adds javadoc to documentation site

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,6 +2,8 @@ site_name: Scenario Weaver
 
 plugins:
   - macros
+theme:
+  name: readthedocs
 
 nav:
   - Home: index.md
@@ -10,3 +12,9 @@ nav:
       - Your First Scenario (jUnit): getting-started/first-scenario-junit.md
       - Your First Scenario (Spring): getting-started/first-scenario-spring.md
       - Examples: getting-started/examples.md
+  - Dev:
+    - JavaDocs: javadoc/index.html
+    - Code Coverage Report: https://app.codecov.io/gh/MOES-Media/scenario-weaver/
+
+repo_url: https://github.com/MOES-Media/scenario-weaver
+edit_uri: edit/main/docs/docs
