--- a/.github/workflows/cd-cd.yml
+++ b/.github/workflows/cd-cd.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - development
+      - main
 
 jobs:
   build-test-and-lint:
@@ -26,6 +27,7 @@ jobs:
   check-license-headers:
     uses: ./.github/workflows/check-license.yml
   publish-snapshot:
+    if: github.ref == 'refs/heads/development'
     environment: SNAPSHOT
     needs:
       - build-test-and-lint
@@ -71,3 +73,39 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_ACTOR: ${{ github.actor }}
+  publish-to-maven-central:
+    if: github.ref == 'refs/heads/main'
+    environment: maven-central
+    needs:
+      - build-test-and-lint
+      - dependency-submission
+      - analyze
+      - check-license-headers
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        id: semantic_release
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+            @semantic-release/commit-analyzer
+            @semantic-release/release-notes-generator
+            @semantic-release/github
+            conventional-changelog-conventionalcommits
+            @semantic-release/exec
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish-to-github-pages:
+    if: github.ref == 'refs/heads/main'
+    environment: maven-central
+    needs:
+      - build-test-and-lint
+      - dependency-submission
+      - analyze
+      - check-license-headers
+    runs-on: ubuntu-latest
+    uses: ./.github/workflows/docs.yml
