--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,7 @@
 name: Deploy Docs
 
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
 
 jobs:
   deploy-docs:
@@ -17,6 +15,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: "maven"
+
+      - name: Generate Javadocs
+        run: mvn clean javadoc:javadoc javadoc:aggregate
+
+      - name: Copy Javadocs
+        run: cp -r target/site/apidocs docs/docs/javadoc
 
       - name: Install MkDocs
         run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
