--- a/.github/workflows/build-test-and-lint.yml
+++ b/.github/workflows/build-test-and-lint.yml
@@ -78,4 +78,4 @@ jobs:
         run: mvn checkstyle:check
 
       - name: Run javadoc check
-        run: mvn javadoc:javadoc -Dmaven.javadoc.failOnWarnings=true
+        run: mvn -B clean install javadoc:javadoc -Dmaven.javadoc.failOnWarnings=true -DskipTests
