--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,86 +27,29 @@ jobs:
   check-license-headers:
     uses: ./.github/workflows/check-license.yml
   publish-snapshot:
-    if: github.ref == 'refs/heads/development'
-    environment: SNAPSHOT
     needs:
       - build-test-and-lint
       - dependency-submission
       - analyze
       - check-license-headers
-    runs-on: ubuntu-latest
 
     permissions:
       contents: write
       packages: write
 
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          server-id: github
-          settings-path: ${{ github.workspace }}
-          cache: "maven"
-
-      - name: Semantic Release (changelog & pre-release)
-        uses: cycjimmy/semantic-release-action@v4
-        id: semantic_release
-        with:
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/git
-            @semantic-release/commit-analyzer
-            @semantic-release/release-notes-generator
-            @semantic-release/github
-            conventional-changelog-conventionalcommits
-            @semantic-release/exec
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish SNAPSHOT to GitHub Packages
-        if: steps.semantic_release.outputs.new_release_published == 'true'
-        run: mvn -B -s ${{ github.workspace }}/settings.xml clean deploy -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTOR: ${{ github.actor }}
-  publish-to-maven-central:
-    if: github.ref == 'refs/heads/main'
-    environment: maven-central
+    uses: ./.github/workflows/release-snapshot.yml
+  publish-stable:
     needs:
       - build-test-and-lint
       - dependency-submission
       - analyze
       - check-license-headers
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
-        id: semantic_release
-        with:
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/git
-            @semantic-release/commit-analyzer
-            @semantic-release/release-notes-generator
-            @semantic-release/github
-            conventional-changelog-conventionalcommits
-            @semantic-release/exec
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    uses: ./.github/workflows/release-stable.yml
   publish-to-github-pages:
-    if: github.ref == 'refs/heads/main'
-    environment: maven-central
     needs:
-      - build-test-and-lint
-      - dependency-submission
-      - analyze
-      - check-license-headers
+      - publish-snapshot
+      - publish-stable
+    if: needs.publish-snapshot.result == 'success' || needs.publish-stable.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Publish Documentation
