--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,12 +4,15 @@ on:
   workflow_call:
 
 jobs:
-  deploy-docs:
+  build-main:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    outputs:
+      site-path: ${{ steps.upload.outputs.site-path }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout main branch
+        uses: actions/checkout@v4
+        with:
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -32,8 +35,79 @@ jobs:
       - name: Install MkDocs
         run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
-      - name: Deploy to GitHub Pages
-        run: mkdocs gh-deploy --force
+      - name: Build main docs
+        run: python -m mkdocs build -f mkdocs-main.yml -d site
+
+      - name: Upload main site
+        uses: actions/upload-artifact@v4
+        with:
+          name: main-site
+          path: docs/site
+
+  build-snapshot:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout dev branch
+        uses: actions/checkout@v4
+        with:
+          ref: dev
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: "maven"
+
+      - name: Generate Javadocs
+        run: mvn clean javadoc:javadoc javadoc:aggregate
+
+      - name: Copy Javadocs
+        run: cp -r target/site/apidocs docs/docs/javadoc
+
+      - name: Install MkDocs
+        run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
+
+      - name: Build snapshot docs
+        run: python -m mkdocs build -f mkdocs-snapshot.yml
         working-directory: docs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload snapshot site
+        uses: actions/upload-artifact@v4
+        with:
+          name: snapshot-site
+          path: docs/site
+
+  merge-and-deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build-main
+      - build-snapshot
+    steps:
+      - name: Download main site
+        uses: actions/download-artifact@v4
+        with:
+          name: main-site
+          path: site
+
+      - name: Download snapshot site
+        uses: actions/download-artifact@v4
+        with:
+          name: snapshot-site
+          path: snapshot-site
+
+      - name: Copy snapshot into main site
+        run: |
+          rm -rf site/snapshot
+          cp -r snapshot-site/* site/snapshot
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: site
