--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,4 +53,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Publish Documentation
-        uses: ./.github/workflows/publish-publish-docs.yml
+        uses: ./.github/workflows/docs.yml
