--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,7 +31,7 @@ jobs:
           cache: "maven"
 
       - name: Generate Javadocs
-        run: mvn clean javadoc:javadoc javadoc:aggregate
+        run: mvn clean install javadoc:javadoc javadoc:aggregate -DskipTests
 
       - name: Copy Javadocs
         run: cp -r target/site/apidocs docs/docs/javadoc
@@ -70,7 +70,7 @@ jobs:
           cache: "maven"
 
       - name: Generate Javadocs
-        run: mvn clean javadoc:javadoc javadoc:aggregate
+        run: mvn clean install javadoc:javadoc javadoc:aggregate -DskipTest
 
       - name: Copy Javadocs
         run: cp -r target/site/apidocs docs/docs/javadoc
