chore: finetuning workflows

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -93,6 +93,8 @@ jobs:
 
   merge-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     needs:
       - build-main
       - build-snapshot
